--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <p style="text-align: center">Hier gibt es die besten Restaurants</p>
 
     <input id="burgerfilter" type="checkbox" name="hallo" checked />
-    <label for="burgerfilter">Burger</label>
+    <label for="burgerfilter" id="labelburger">Burger</label>
 
     <input id="doenerfilter" type="checkbox" name="schuu" checked />
-    <label for="doenerfilter">Döner</label>
+    <label for="doenerfilter" id="labeldoener">Döner</label>
 
     <input id="pizzafilter" type="checkbox" name="lesgoo" checked />
-    <label for="pizzafilter">Pizza</label>
+    <label for="pizzafilter" id="labelpizza">Pizza</label>
 
     <ul class="restaurants">
       <li class="Burger">
